# BACI-climate-index

./: .gitignore  .zenodo.json  CITATION.cff  LICENSE  README.md  environment.yml  lndex_latest.ipynb  pyproject.toml
.github/workflows/: ci.yml
configs/: default.yaml
docs/: data_sources.md  final_results.md  github_checklist.md  methodology.md  release.md
notebooks/: README.md  final-index-build.ipynb  index_VF_plots.ipynb  index_VF_stats.ipynb  index_VF_stats_test.ipynb
scripts/: README.md
src/baci_climate_index/: __init__.py  cli.py  components.py  composite.py  config.py  diagnostics.py  io.py  plotting.py
tests/: test_composite.py  test_config.py  test_diagnostics.py  test_io.py
